<resources>
    <string name="app_name">EEN交通即時防災緊急通報系統</string>
    <string name="btn_login_name">登入</string>
    <string name="btn_register_name">註冊</string>
    <string name="SignUp_Screen">註冊</string>
    <string name="btn_OK">確定</string>
    <string name="txt_hint_account">帳號</string>
    <string name="txt_hint_password">密碼</string>
    <string name="txt_hint_phone">電話</string>
    <string name="txt_hint_name">姓名</string>
    <string name="txt_SignUp_input_info">8~20個英文或數字</string>
    <string name="txt_SignUp_account_error_message">帳號輸入錯誤</string>
    <string name="txt_SignUp_password_error_message">密碼輸入錯誤</string>
    <string name="txt_SignUp_phone_error_message">電話輸入錯誤</string>
    <string name="txt_SignUp_name_error_message">姓名輸入錯誤</string>
    <string name="txt_SignUp_success">註冊成功</string>
    <string name="txt_SignUp_duplicate">帳號重複，請重新輸入</string>
    <string name="txt_Login_fail">帳號或密碼錯誤</string>
    <string name="txt_WiFi_fail">網路不穩</string>
    <string name="txt_NoRecord">查無紀錄</string>
    <string name="txt_ReportRecord_title">通報紀錄</string>
    <string name="txt_MainActivity_title">主畫面</string>
    <string name="txt_SignUpActivity_title">註冊</string>
    <string name="btn_main_picturReport_name">照片通報</string>
    <string name="btn_main_mapInfo_name">道路狀況</string>
    <string name="btn_main_ReportRecord_name">通報紀錄</string>
    <string name="btn_main_logout_name">登出</string>
    <string name="title_activity_map">Map</string>
</resources>
