<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignUp_Screen"
        android:id="@+id/textView"
        android:layout_marginTop="43dp"
        android:textSize="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_SignUp_input_info"
        android:id="@+id/textView2"
        android:layout_below="@+id/edit_SignUp_account"
        android:layout_alignStart="@+id/edit_SignUp_account" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_SignUp_input_info"
        android:id="@+id/textView3"
        android:layout_below="@+id/edit_SignUp_password"
        android:layout_alignStart="@+id/edit_SignUp_password" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/edit_SignUp_account"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:maxLength="20"
        android:hint="@string/txt_hint_account"
        android:singleLine="true"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edit_SignUp_password"
        android:layout_below="@+id/edit_SignUp_account"
        android:layout_alignStart="@+id/edit_SignUp_account"
        android:layout_marginTop="66dp"
        android:maxLength="20"
        android:hint="@string/txt_hint_password"
        android:singleLine="true"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_OK"
        android:id="@+id/btn_Sign_OK"
        android:layout_below="@+id/edit_SignUp_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_SignUp_account_error_message"
        android:id="@+id/txt_SignUp_account_error"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:textColor="#ffff0000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_SignUp_password_error_message"
        android:id="@+id/txt_SignUp_password_error"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:textColor="#ff0000" />

</RelativeLayout>
