<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.een.MainActivity"
    android:background="@color/colorBackground">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_below="@+id/txt_main_user"
        android:layout_alignParentEnd="true"
        android:background="@color/colorBackground">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_main_picturReport_name"
            android:id="@+id/btn_main_pictureReport"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.2"
            android:singleLine="false"
            android:textColor="@color/colorText"
            android:background="@color/colorButton" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_main_mapInfo_name"
            android:id="@+id/btn_main_mapInfo"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.20"
            android:textColor="@color/colorText"
            android:background="@color/colorButton" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_main_ReportRecord_name"
            android:id="@+id/btn_main_ReportRecord"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.2"
            android:textColor="@color/colorText"
            android:background="@color/colorButton" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_main_logout_name"
            android:id="@+id/btn_main_logout"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.2"
            android:textColor="@color/colorText"
            android:background="@color/colorButton" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/txt_main_user"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="16dp"
        android:textColor="@color/colorText" />
</RelativeLayout>
