<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.een.LoginActivity"
    android:background="@color/colorBackground">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_account"
        android:maxLength="20"
        android:textSize="25dp"
        android:hint="@string/txt_hint_account"
        android:singleLine="true"
        android:layout_above="@+id/edit_password"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="38dp"
        android:textColorHint="@color/colorHint"
        android:textColor="@color/colorText" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edit_password"
        android:maxLength="20"
        android:textSize="25dp"
        android:hint="@string/txt_hint_password"
        android:singleLine="true"
        android:layout_above="@+id/btn_login"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="29dp"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorHint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_name"
        android:id="@+id/btn_login"
        android:background="@drawable/shape_login"
        android:textColor="@color/colorText"
        android:textSize="20dp"
        android:layout_alignTop="@+id/btn_SignUp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="45dp"
        android:singleLine="false"
        android:textStyle="normal|bold|italic" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_register_name"
        android:id="@+id/btn_SignUp"
        android:background="@drawable/shape_signup"
        android:textColor="#CAFF4081"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/btn_login"
        android:layout_marginStart="52dp"
        android:textStyle="normal|bold|italic" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:id="@+id/imageView"
        android:background="@drawable/logo"
        android:layout_above="@+id/edit_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        />
</RelativeLayout>
